<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.iipc.id21432044.StatusActivity" >

    <TextView
        android:id="@+id/pkgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkgName"  />

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pkgName"
        android:layout_below="@+id/pkgName"
        android:layout_marginTop="16dp"
        android:text="@string/textCount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/postButton" />

    <EditText
        android:id="@+id/tweetContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textCount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/tweetContentHint"
        android:inputType="textMultiLine"
        android:text="@string/tweetContent" >

        <requestFocus />
    </EditText>

</RelativeLayout>